--- a/JS-Projects/FileMaker/src/package.json
+++ b/JS-Projects/FileMaker/src/package.json
@@ -2,7 +2,7 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "sass/mystyles.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
