--- a/JS-Projects/FileMaker/src/package.json
+++ b/JS-Projects/FileMaker/src/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bulma": "^0.9.0"
+  "dependencies": {},
+  "devDependencies": {
+    "bulma": "^0.9.0",
+    "node-sass": "^4.14.1"
   }
 }
