--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,42 @@
 {
-    "git.ignoreLimitWarning": true
+    "sync.gist": "40707451027d680cbf500f272f35b4d5",
+    "editor.fontFamily": "Victor Mono",
+    "editor.fontLigatures": true,
+    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+    "workbench.iconTheme": "Monokai Pro (Filter Octagon) Icons",
+    "editor.minimap.enabled": false,
+    "[dart]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.rulers": [
+            80
+        ],
+        "editor.selectionHighlight": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.suggestSelection": "first",
+        "editor.tabCompletion": "onlySnippets",
+        "editor.wordBasedSuggestions": false
+    },
+    "glassit.alpha": 220,
+    "terminal.integrated.rendererType": "dom",
+    "material-icon-theme.folders.theme": "specific",
+    "editor.detectIndentation": false,
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "dart.checkForSdkUpdates": false,
+    "workbench.colorTheme": "Nord Operator Theme",
+    "editor.formatOnSave": true,
+    "window.zoomLevel": 0,
+    "kite.showWelcomeNotificationOnStartup": false,
+    "editor.fontWeight": "bold",
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    }
 }
